--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     <title>Battleship</title>
   </head>
   <body>
+    <div class="main-container">
 
+    </div>
   </body>
 </html>
