--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Battleship</title>
   </head>
   <body>
+    <div class="title"></div>
+    <div class="player-title">
+      <div id='player1'></div>
+      <div id='player2'></div>
+    </div>
     <div class="main-container">
 
     </div>
